--- a/arrasio/src/client/index.html
+++ b/arrasio/src/client/index.html
@@ -10,10 +10,10 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>arras.io beta</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <title>arras.io beta</title>    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/p2p.css" />
     <!-- Version Control -->
     <script>
         var VERSION = localStorage.getItem('versionHash');
