--- a/arrasio/src/client/index.html
+++ b/arrasio/src/client/index.html
@@ -151,7 +151,25 @@
     </div>
     <!-- JS -->
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <!-- Base Scripts -->
+    <script src="js/lib/script-loader.js"></script>
+    <!-- Game Scripts -->
     <script src="js/app.js"></script>
+    <script src="js/lib/color.js"></script>
+    <script src="js/lib/global.js"></script>
+    <script src="js/lib/util.js"></script>
+    <script src="js/lib/fasttalk.js"></script>
+    <script src="js/canvas.js"></script>
+    <!-- P2P Scripts -->
+    <script src="https://www.pulgram.com/js/pulgram-bridge.js"></script>
+    <script src="js/p2p-game.js"></script>
+    <script src="js/arras-p2p-adapter.js"></script>
+    <script src="js/game-state-converter.js"></script>
+    <script src="js/arras-protocol-adapter.js"></script>
+    <script src="js/p2p-websocket-adapter.js"></script>
+    <script src="js/p2p-status-ui.js"></script>
+    <script src="js/p2p-integration.js"></script>
+    <script src="js/p2p-start-button-fix.js"></script>
     <script>
         var clicked=true;
         $("#startMenuSlidingTrigger").on('click', function() {
@@ -183,9 +201,8 @@
     <script src="js/game-state-converter.js"></script>
     <script src="js/arras-protocol-adapter.js"></script>
     <script src="js/p2p-websocket-adapter.js"></script>
-    <script src="js/p2p-status-ui.js"></script>
- 
-    <script src="js/p2p-integration.js"></script>
+    <script src="js/p2p-status-ui.js"></script>    <script src="js/p2p-integration.js"></script>
+    <script src="js/p2p-start-button-fix.js"></script>
     
     <!-- P2P Mode Auto-Initializer -->
     <script>
